Crash with 'File Output' node #99750

Closed
opened 2022-07-15 23:29:07 +02:00 by Germano Cavalcante · 6 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.0 Core Profile Context 22.20.00.20.220516

Blender Version
Broken: version: 3.3.0 Alpha, caused by 5baa3ecda6

Short description of error
Bug observed when rendering attached file in #99651 (Dither affects 'File Output' image even when "save as render" is disabled ).
The render crash apparently due to the File Output node.
This is the stack trace at the time of the crash:

>	blender.exe!colormanagement_transform_ex(unsigned char * byte_buffer, float * float_buffer, int width, int height, int channels, const unsigned char * from_colorspace, const unsigned char * to_colorspace, bool predivide, bool do_threaded) Line 1947	C

 	blender.exe!IMB_colormanagement_transform(float * buffer, int width, int height, int channels, const unsigned char * from_colorspace, const unsigned char * to_colorspace, bool predivide) Line 1983	C
 	blender.exe!IMB_rect_from_float(ImBuf * ibuf) Line 733	C
 	blender.exe!IMB_colormanagement_imbuf_for_write(ImBuf * ibuf, bool save_as_render, bool allocate_result, const ImageFormatData * image_format) Line 2573	C
 	blender.exe!blender::compositor::OutputSingleLayerOperation::deinit_execution() Line 266	C++
 	blender.exe!blender::compositor::TiledExecutionModel::execute(blender::compositor::ExecutionSystem & exec_system) Line 125	C++
 	blender.exe!blender::compositor::ExecutionSystem::execute() Line 100	C++
 	blender.exe!COM_execute(RenderData * render_data, Scene * scene, bNodeTree * node_tree, int rendering, const char * view_name) Line 95	C++
 	blender.exe!ntreeCompositExecTree(Scene * scene, bNodeTree * ntree, RenderData * rd, int rendering, int do_preview, const char * view_name) Line 218	C++
 	blender.exe!do_render_compositor(Render * re) Line 1217	C
 	blender.exe!do_render_full_pipeline(Render * re) Line 1426	C
 	blender.exe!RE_RenderFrame(Render * re, Main * bmain, Scene * scene, ViewLayer * single_layer, Object * camera_override, const int frame, const float subframe, const bool write_still) Line 1829	C
 	blender.exe!render_startjob(void * rjv, short * stop, short * do_update, float * progress) Line 670	C++
 	blender.exe!do_job_thread(void * job_v) Line 358	C
 	blender.exe!tslot_thread_start(void * tslot_p) Line 205	C++
 	[External Code]	

Exact steps for others to reproduce the error

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.0 Core Profile Context 22.20.00.20.220516 **Blender Version** Broken: version: 3.3.0 Alpha, caused by 5baa3ecda6 **Short description of error** Bug observed when rendering attached file in #99651 (Dither affects 'File Output' image even when "save as render" is disabled ). The render crash apparently due to the `File Output` node. This is the stack trace at the time of the crash: ``` > blender.exe!colormanagement_transform_ex(unsigned char * byte_buffer, float * float_buffer, int width, int height, int channels, const unsigned char * from_colorspace, const unsigned char * to_colorspace, bool predivide, bool do_threaded) Line 1947 C blender.exe!IMB_colormanagement_transform(float * buffer, int width, int height, int channels, const unsigned char * from_colorspace, const unsigned char * to_colorspace, bool predivide) Line 1983 C blender.exe!IMB_rect_from_float(ImBuf * ibuf) Line 733 C blender.exe!IMB_colormanagement_imbuf_for_write(ImBuf * ibuf, bool save_as_render, bool allocate_result, const ImageFormatData * image_format) Line 2573 C blender.exe!blender::compositor::OutputSingleLayerOperation::deinit_execution() Line 266 C++ blender.exe!blender::compositor::TiledExecutionModel::execute(blender::compositor::ExecutionSystem & exec_system) Line 125 C++ blender.exe!blender::compositor::ExecutionSystem::execute() Line 100 C++ blender.exe!COM_execute(RenderData * render_data, Scene * scene, bNodeTree * node_tree, int rendering, const char * view_name) Line 95 C++ blender.exe!ntreeCompositExecTree(Scene * scene, bNodeTree * ntree, RenderData * rd, int rendering, int do_preview, const char * view_name) Line 218 C++ blender.exe!do_render_compositor(Render * re) Line 1217 C blender.exe!do_render_full_pipeline(Render * re) Line 1426 C blender.exe!RE_RenderFrame(Render * re, Main * bmain, Scene * scene, ViewLayer * single_layer, Object * camera_override, const int frame, const float subframe, const bool write_still) Line 1829 C blender.exe!render_startjob(void * rjv, short * stop, short * do_update, float * progress) Line 670 C++ blender.exe!do_job_thread(void * job_v) Line 358 C blender.exe!tslot_thread_start(void * tslot_p) Line 205 C++ [External Code] ``` **Exact steps for others to reproduce the error** - Open attached .blend file - Render Image [gradient.blend](https://archive.blender.org/developer/F13293203/gradient.blend)
Author
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Added subscriber: @brecht

Added subscriber: @brecht
Author
Member

Since it was caused by {5baa3ecda663}, @brecht, does this ring a bell?

Since it was caused by {5baa3ecda663}, @brecht, does this ring a bell?

This issue was referenced by 1f8567ac68

This issue was referenced by 1f8567ac68b667ba9b001fd2f33c4c1f24ccafa0

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-07-18 15:50:10 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99750
No description provided.