Fix T99750: crash with file output node, after image colorspace saving changes